# g-league-scouting-platform

./: .gitignore  Dockerfile  LICENSE  Main.py  README.md  app.py  pyproject.toml  requirements.txt  streamlit.py
data/API/: nba_ingestion_JJ.py
data/bronze/: advanced_2022_2024.csv  all-star_selections_2022_2024.csv  draft_pick_history_2022_2024.csv  end_of_season_teams_(voting)_2022_2024.csv  end_of_season_teams_2022_2024.csv  kaggle_game_2021_2024.csv  kaggle_game_summary_2021_2024.csv  kaggle_line_score_2021_2024.csv  kaggle_other_stats_2021_2024.csv  opponent_stats_per_100_poss_2022_2024.csv  opponent_stats_per_game_2022_2024.csv  opponent_totals_2022_2024.csv  per_100_poss_2022_2024.csv  per_36_minutes_2022_2024.csv  player_award_shares_2022_2024.csv  player_career_info_2022_2024.csv  player_per_game_2022_2024.csv  player_play_by_play_2022_2024.csv  player_season_info_2022_2024.csv  player_shooting_2022_2024.csv  player_totals_2022_2024.csv  team_abbrev_2022_2024.csv  team_stats_per_100_poss_2022_2024.csv  team_stats_per_game_2022_2024.csv  team_summaries_2022_2024.csv  (+1 more)
g_league_dbt/: .user.yml  dbt_project.yml  profiles.yml
notebooks/: explore_bronze_data_JJ.ipynb  explore_nba_api_JJ.ipynb
pages/: 0_Presentation.py  1_Team_Overview.py  2_Player_Search.py  3_Player_Profiles.py  vue_equipes.py
scripts/: clean_and_push_team_stats_regular.py  clean_gcs_csv_headers.py  extract_kaggle.py  load_bronze_to_bq.py  load_cleaned_csvs_to_bq.py  load_team_stats_regular_to_bq.py  push_bronze_to_bucket.py
utils/: bigquery_auth.py
venv_gleague/: pyvenv.cfg
(+24 files in other folders)
